Cloned as a fork
Changes to be committed:
modified:   .gitignore
new file:   Makefile
modified:   examples/generate_target.ipynb
modified:   examples/scatter_hist.ipynb

--- a/examples/generate_target.ipynb
+++ b/examples/generate_target.ipynb
@@ -34,7 +34,7 @@
     "r = theta / np.pi / 2 + 0.5\n",
     "\n",
     "fig = plt.figure(figsize=(10, 10))\n",
-    "ax = fig.add_subplot(projection='polar')\n",
+    "ax = fig.add_subplot(projection=\"polar\")\n",
     "ax.errorbar(theta, r, xerr=0.25, yerr=0.1, capsize=7, fmt=\"o\", c=\"seagreen\")\n",
     "ax.set_title(\"Pretty polar error bars\")\n",
     "plt.show()"
@@ -66,22 +66,23 @@
     "# low, close, volume, adj_close from the mpl-data/sample_data directory. The\n",
     "# record array stores the date as an np.datetime64 with a day unit ('D') in\n",
     "# the date column.\n",
-    "price_data = (cbook.get_sample_data('goog.npz', np_load=True)['price_data']\n",
-    "              .view(np.recarray))\n",
+    "price_data = cbook.get_sample_data(\"goog.npz\", np_load=True)[\"price_data\"].view(\n",
+    "    np.recarray\n",
+    ")\n",
     "price_data = price_data[-250:]  # get the most recent 250 trading days\n",
     "\n",
     "delta1 = np.diff(price_data.adj_close) / price_data.adj_close[:-1]\n",
     "\n",
     "# Marker size in units of points^2\n",
-    "volume = (15 * price_data.volume[:-2] / price_data.volume[0])**2\n",
+    "volume = (15 * price_data.volume[:-2] / price_data.volume[0]) ** 2\n",
     "close = 0.003 * price_data.close[:-2] / 0.003 * price_data.open[:-2]\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "ax.scatter(delta1[:-1], delta1[1:], c=close, s=volume, alpha=0.5)\n",
     "\n",
-    "ax.set_xlabel(r'$\\Delta_i$', fontsize=15)\n",
-    "ax.set_ylabel(r'$\\Delta_{i+1}$', fontsize=15)\n",
-    "ax.set_title('Volume and percent change')\n",
+    "ax.set_xlabel(r\"$\\Delta_i$\", fontsize=15)\n",
+    "ax.set_ylabel(r\"$\\Delta_{i+1}$\", fontsize=15)\n",
+    "ax.set_title(\"Volume and percent change\")\n",
     "\n",
     "ax.grid(True)\n",
     "fig.tight_layout()\n",
@@ -108,8 +109,9 @@
     "# low, close, volume, adj_close from the mpl-data/sample_data directory. The\n",
     "# record array stores the date as an np.datetime64 with a day unit ('D') in\n",
     "# the date column.\n",
-    "price_data = (cbook.get_sample_data('goog.npz', np_load=True)['price_data']\n",
-    "              .view(np.recarray))\n",
+    "price_data = cbook.get_sample_data(\"goog.npz\", np_load=True)[\"price_data\"].view(\n",
+    "    np.recarray\n",
+    ")\n",
     "price_data = price_data[-250:]  # get the most recent 250 trading days"
    ]
   },
@@ -152,7 +154,7 @@
     }
    ],
    "source": [
-    "type(cbook.get_sample_data('goog.npz', np_load=True))"
+    "type(cbook.get_sample_data(\"goog.npz\", np_load=True))"
    ]
   },
   {
@@ -162,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "goog_npz = cbook.get_sample_data('goog.npz', np_load=True)"
+    "goog_npz = cbook.get_sample_data(\"goog.npz\", np_load=True)"
    ]
   },
   {
