--- a/examples/scatter_hist.ipynb
+++ b/examples/scatter_hist.ipynb
@@ -54,11 +54,11 @@
     "    # now determine nice limits by hand:\n",
     "    binwidth = 0.25\n",
     "    xymax = max(np.max(np.abs(x)), np.max(np.abs(y)))\n",
-    "    lim = (int(xymax/binwidth) + 1) * binwidth\n",
+    "    lim = (int(xymax / binwidth) + 1) * binwidth\n",
     "\n",
     "    bins = np.arange(-lim, lim + binwidth, binwidth)\n",
     "    ax_histx.hist(x, bins=bins)\n",
-    "    ax_histy.hist(y, bins=bins, orientation='horizontal')"
+    "    ax_histy.hist(y, bins=bins, orientation=\"horizontal\")"
    ]
   },
   {
@@ -94,9 +94,18 @@
     "# Add a gridspec with two rows and two columns and a ratio of 1 to 4 between\n",
     "# the size of the marginal axes and the main axes in both directions.\n",
     "# Also adjust the subplot parameters for a square plot.\n",
-    "gs = fig.add_gridspec(2, 2,  width_ratios=(4, 1), height_ratios=(1, 4),\n",
-    "                      left=0.1, right=0.9, bottom=0.1, top=0.9,\n",
-    "                      wspace=0.05, hspace=0.05)\n",
+    "gs = fig.add_gridspec(\n",
+    "    2,\n",
+    "    2,\n",
+    "    width_ratios=(4, 1),\n",
+    "    height_ratios=(1, 4),\n",
+    "    left=0.1,\n",
+    "    right=0.9,\n",
+    "    bottom=0.1,\n",
+    "    top=0.9,\n",
+    "    wspace=0.05,\n",
+    "    hspace=0.05,\n",
+    ")\n",
     "# Create the Axes.\n",
     "ax = fig.add_subplot(gs[1, 0])\n",
     "ax_histx = fig.add_subplot(gs[0, 0], sharex=ax)\n",
@@ -136,7 +145,7 @@
    ],
    "source": [
     "# Create a Figure, which doesn't have to be square.\n",
-    "fig = plt.figure(layout='constrained')\n",
+    "fig = plt.figure(layout=\"constrained\")\n",
     "# Create the main axes, leaving 25% of the figure space at the top and on the\n",
     "# right to position marginals.\n",
     "ax = fig.add_gridspec(top=0.75, right=0.75).subplots()\n",
